--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <title>螂海の个人blog</title>
         <link rel="shortcut icon" href="blog/imgs/头像.png">
         <meta http-equiv="refresh" content="0;url=blog/HOME/index.html"> 
+        <meta name="baidu-site-verification" content="code-Pm2V1jMpIO" />
     </head>
     <body>
     </body>
