--- a/167/about/index.html
+++ b/167/about/index.html
@@ -180,19 +180,23 @@
                         <h1>· 赞助</h1>
                         <center>
                             <img src="../img/赞助.png">
-                            <p>“不限金额，量力而行。<br>
-                                服务器每月开销大约在40元左右，就算没有任何资助up也大概负担的起。如果能够得到大家帮助很荣幸，但也一定不要勉强。”
+                            <p style="font-size: 20px;">
+                                “不限金额，量力而行”<br>
+                                “服务器每月开销大约在40元左右”<br>
+                                “就算没有任何资助up也大概负担的起”<br>
+                                “如果能够得到大家帮助很荣幸，但也一定不要勉强”
                             </p>
                         </center>
                     </div>
-                    <div style="height: 100px;"></div>
+                    <div style="height: 90px;"></div>
                 </div>
             </center>
 
+
         <!--尾页-->
-        <div style="background-color:rgb(90, 90, 90);height: 1000px;">
+        <div style="background-color:rgb(90, 90, 90);height: 500px;">
             <!--导航栏-->
-            <div style="width: 15%; margin-left: 15%;float: left;position: relative;top: 30%;">
+            <div style="width: 15%; margin-left: 15%;float: left;position: relative;top: 15%;">
                 <a href="../home/index.html" style="text-decoration: none;">
                     <p style="color: rgb(161, 161, 161);">167号世界</p>
                     <p style="color: rgb(161, 161, 161);font-size: x-small;">The 167 World</p>
