--- a/167/map/index.html
+++ b/167/map/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="shortcut icon" href="../img/167图标.png">
-        <meta charset="utf-8">
-        <title>167号世界 - 线上地图</title>
-        <script src="../其他/jquery-1.8.3.min.js"></script>
-        <script src="../其他/动画.js"></script>
-        <link href="../其他/基本.css" rel="stylesheet">
-    </head>
+<head>
+    <link rel="shortcut icon" href="../img/167图标.png">
+    <meta charset="utf-8">
+    <title>167号世界 - 线上地图</title>
+    <script src="../其他/jquery-1.8.3.min.js"></script>
+    <script src="../其他/动画.js"></script>
+    <script src="../其他/音频.js"></script>
+    <link href="../其他/基本.css" rel="stylesheet">
+</head>
 
     <body bgcolor="#E9E9E9">
 
@@ -54,7 +55,7 @@
                         <div style="height: 250px; width: 90%;">
                             <div style="text-align: left;">
                                 <button style="background-color: aquamarine;height: 100px;width: 30%;text-align: center;">
-                                    <a href="The 167 World!!!/index.html" target="_blank" style="color: white; text-decoration: none;">
+                                    <a href="The 167 World!!!/index.html" style="color: white; text-decoration: none;">
                                         <h1>167号世界！！！</h1>
                                         <p>168号世界！！！的实时卫星地图</p>
                                         <br>
@@ -68,9 +69,9 @@
         </div>
 
         <!--尾页-->
-        <div style="background-color:rgb(90, 90, 90);height: 1000px;">
+        <div style="background-color:rgb(90, 90, 90);height: 500px;">
             <!--导航栏-->
-            <div style="width: 15%; margin-left: 15%;float: left;position: relative;top: 30%;">
+            <div style="width: 15%; margin-left: 15%;float: left;position: relative;top: 15%;">
                 <a href="../home/index.html" style="text-decoration: none;">
                     <p style="color: rgb(161, 161, 161);">167号世界</p>
                     <p style="color: rgb(161, 161, 161);font-size: x-small;">The 167 World</p>
