--- a/167/server/The 167 World!!!/plugins/index.html
+++ b/167/server/The 167 World!!!/plugins/index.html
@@ -29,7 +29,7 @@
                 <li><a href="../../../download/index.html">下载</a></li>
                 <li><a href="../../../server/index.html">服务器</a></li>
                 <li><a href="../../../map/index.html">线上地图</a></li>
-                <li><a href="../../../about us/index.html">关于我们</a></li>                    
+                <li><a href="../../../about us/index.html">关于我们</a></li>
             </ul>
         </div>
 
@@ -42,18 +42,30 @@
                 <i>仅显示部分插件</i>
                 <hr>
                 <ul>
-                    <li><a href="CatSeedLogin/index.html" style="color: black;text-decoration: none;">CatSeedLogin - 登录</a></li><br>
-                    <li><a href="Dynmap/index.html" style="color: black;text-decoration: none;">Dynmap - 网页地图</a></li><br>
-                    <li><a href="Geyser/index.html" style="color: black;text-decoration: none;">Geyser - 间歇泉</a></li><br>
-                    <li><a href="JustMoney/index.html" style="color: black;text-decoration: none;">JustMoney - 经济</a></li><br>
-                    <li><a href="QualityArmory/index.html" style="color: black;text-decoration: none;">QualityArmory - 枪械</a></li><br>
-                    <li><a href="Residence/index.html" style="color: black;text-decoration: none;">Residence - 领地</a></li><br>
-                    <li><a href="SetHome/index.html" style="color: black;text-decoration: none;">SetHome - 传送点</a></li><br>
+                    <li><a href="CatSeedLogin/index.html" style="color: black;text-decoration: none;">CatSeedLogin - 登录</a></li>
+                    <br>
+                    <li><a href="Dynmap/index.html" style="color: black;text-decoration: none;">Dynmap - 网页地图</a></li>
+                    <br>
+                    <li><a href="Geyser/index.html" style="color: black;text-decoration: none;">Geyser - 间歇泉</a></li>
+                    <br>
+                    <li><a href="JustMoney/index.html" style="color: black;text-decoration: none;">JustMoney - 经济</a></li>
+                    <br>
+                    <li><a href="QualityArmory/index.html" style="color: black;text-decoration: none;">QualityArmory - 枪械</a></li>
+                    <br>
+                    <li><a href="Residence/index.html" style="color: black;text-decoration: none;">Residence - 领地</a></li>
+                    <br>
+                    <li><a href="SetHome/index.html" style="color: black;text-decoration: none;">SetHome - 传送点</a></li>
+                    <br>
                     <li><a href="TPAPro/index.html" style="color: black;text-decoration: none;">TPAPro - 传送</a></li>
                 </ul>
             </div>
         </center>
         <div style="height: 200px;"></div>
+
+
+        <audio autoplay loop id="audio1">
+            <source src="../../../audio/music/【明日方舟】极少人知晓的一首BGM~3.mp3" type="audio/mp3">
+        </audio>
 
         <!--尾页-->
         <div style="background-color:rgb(90, 90, 90);height: 1000px;">
