--- a/167/download/index.html
+++ b/167/download/index.html
@@ -11,6 +11,19 @@
 
     <body bgcolor="#E9E9E9">
 
+        <!--背景音乐-->
+        <script src="../其他/bgm.js"></script>
+        <div class="music">
+            <div class="bgm_text"></div>
+            <div class="bgm_btn">
+                <span class="bgm_btn_play"></span>
+                <span class="bgm_btn_stop"></span>
+                <span class="bgm_btn_next"></span>
+                <span class="bgm_btn_rest"></span>
+            </div>
+            <audio value="1" id="bgm" controls style="display: none;"></audio>
+        </div>
+
         <!--导航-->
         <div id="导航">
             <div id="标题">
