--- a/167/home/index.html
+++ b/167/home/index.html
@@ -108,7 +108,7 @@
         <!--内容-->
         <div id="内容">
             <div id="主图">
-                <img src="../img/首页.png" width="100%">
+                <img src="../img/首页.jpg" width="100%">
                 <div class="左出">
                     <pre style="font-family: 站酷高端黑;">167号世界</pre>
                     <pre style="font-size: 30px;">The 167 World</pre>
