--- a/167/mframe/index.html
+++ b/167/mframe/index.html
@@ -3,9 +3,12 @@
 <head>
     <title>167号世界</title>
     <style>
-        .frame1 {
+        .frame1b {
             overflow: hidden;
             height: 100%;
+        }
+        .frame1a {
+            border: medium none;
         }
     </style>
 
@@ -17,8 +20,8 @@
 </head>
 <body>
 
-    <div class="frame1">
-        <iframe src="../home/index.html" seamless width="100%" height="100%"></iframe>
+    <div class="frame1b">
+        <iframe src="../home/index.html" width="100%" height="100%" class="frame1a"></iframe>
     </div>
 
     <audio autoplay loop>
