--- a/167/server/The 167 World!!!/plugins/JustMoney/index.html
+++ b/167/server/The 167 World!!!/plugins/JustMoney/index.html
@@ -24,52 +24,32 @@
                     </div>
                 </div>
             </div>
-            <ul class="右出">
+            <ul>
                 <li><a href="../../../../home/index.html">首页</a></li>
                 <li><a href="../../../../download/index.html">下载</a></li>
                 <li><a href="../../../../server/index.html">服务器</a></li>
                 <li><a href="../../../../map/index.html">线上地图</a></li>
-                <li><a href="../../../../about/index.html">关于我们</a></li>                    
+                <li><a href="../../../../about/index.html">关于我们</a></li>
             </ul>
         </div>
 
-        <!--内容-->
-        <div style="height: 200px;"></div>
-        <center>
-            <div style="text-align: left;width: 50%;">
-                <h1>167号世界！！！ - 插件 - JustMoney<br>The 167 World!!! - plugins - JustMoney</h1>
-                <hr>
-                <pre>
-/money 命令也可以通过 /balance 或 /bal 替代
-/money 显示你自己的余额
-/money [player] 显示其他玩家的余额
-/money send [player] [amount] 发送钱给另一个玩家
-/money help 显示帮助列表 
-                </pre>
-                <a href="https://www.spigotmc.org/resources/justmoney.81941/" target="_blank" style="color: gray;text-decoration: none;">插件来源</a>
-            </div>
-        </center>
-        <div style="height: 200px;"></div>
-
         <!--尾页-->
-        <div style="background-color:rgb(90, 90, 90);height: 1000px;">
+        <div style="background-color:rgb(90, 90, 90);height: 500px;">
             <!--导航栏-->
-            <div style="width: 15%; margin-left: 15%;float: left;position: relative;top: 30%;">
-                <a href="../../../../home/index.html" style="text-decoration: none;">
-                    <p style="color: rgb(161, 161, 161);">167号世界</p>
-                    <p style="color: rgb(161, 161, 161);font-size: x-small;">The 167 World</p>
+            <div style="width: 15%; margin-left: 15%;float: left;position: relative;top: 15%;">
+                <a href="../home/index.html" style="text-decoration: none;">
+                    <p style="color: rgb(200, 200, 200); font-size: 20px; ">167号世界</p>
+                    <p style="color: rgb(200, 200, 200); font-size: 19px; ">The 167 World</p>
                 </a>
-                <br>
                 <hr>
-                <br>
-                <p><a href="../../../../home/index.html" style="color: rgb(240, 240, 240);text-decoration: none;">首页</a></p>
-                <p><a href="../../../../download/index.html" style="color: rgb(240, 240, 240);text-decoration: none;">下载</a></p>
-                <p><a href="../../../../server/index.html" style="color: rgb(240, 240, 240);text-decoration: none;">服务器</a></p>
-                <p><a href="../../../../map/index.html" style="color: rgb(240, 240, 240);text-decoration: none;">线上地图</a></p>
-                <p><a href="../../../../about/index.html" style="color: rgb(240, 240, 240);text-decoration: none;">关于我们</a></p>
+                <p><a href="../home/index.html" style="color: rgb(245, 245, 245); text-decoration: none; font-size: 17px; ">首页</a></p>
+                <p><a href="../download/index.html" style="color: rgb(245, 245, 245); text-decoration: none; font-size: 17px;">下载</a></p>
+                <p><a href="../server/index.html" style="color: rgb(245, 245, 245); text-decoration: none; font-size: 17px;">服务器</a></p>
+                <p><a href="../map/index.html" style="color: rgb(245, 245, 245); text-decoration: none; font-size: 17px;">线上地图</a></p>
+                <p><a href="../about/index.html" style="color: rgb(245, 245, 245); text-decoration: none; font-size: 17px;">关于我们</a></p>
             </div>
             <!--二维码·167号绿洲【联机群】-->
-            <div style="width: 12%;margin-left: 25%;float: left;position: relative;top: 35%;">
+            <div style="width: 11%;margin-left: 28%;float: left;position: relative;top: 27%;">
                 <a target="_blank" href="https://qm.qq.com/cgi-bin/qm/qr?k=ik4cdJJ-lnhmbXq5kb2_tVQFzx-0jkHe&jump_from=webapi" style="color: rgb(200, 200, 200);text-decoration: none;">
                     <img src="https://qun.qq.com/qrcode/index?data=https%3A%2F%2Fqm.qq.com%2Fcgi-bin%2Fqm%2Fqr%3Fk%3D5devYcbamvnyT6GAjRBgk1rF1IRsHG_I%26jump_from%3Dwebapi%26qr%3D1" style="width: 100%" alt="167号绿洲【联机群】" title="167号绿洲【联机群】">
                     <center><p>167号绿洲【联机群】</p></center>
@@ -77,7 +57,7 @@
                 <center><p style="color: rgb(240, 240, 240);font-weight: lighter;">QQ群：1026474759</p></center>
             </div>
             <!--二维码·167小宇宙-->
-            <div style="width: 12%;margin-left: 5%;float: left;position: relative;top: 35%;">
+            <div style="width: 11%;margin-left: 9%;float: left;position: relative;top: 27%;">
                 <a target="_blank" href="https://qm.qq.com/cgi-bin/qm/qr?k=XGN3c0D8E57lV-QViRfoxtsiYsofzqrF&jump_from=webapi" style="color: rgb(200, 200, 200);text-decoration: none;">
                     <img src="https://qun.qq.com/qrcode/index?data=https%3A%2F%2Fqm.qq.com%2Fcgi-bin%2Fqm%2Fqr%3Fk%3DfEcUJJpwsSaa9uP05O-i1ohtOQBqT0en%26jump_from%3Dwebapi%26qr%3D1" style="width: 100%" alt="167小宇宙" title="167小宇宙">
                     <center><p>167小宇宙</p></center>
